crates/introspect/tests/snapshots/sqlite__table_definition.snap
---
source: crates/introspect/tests/sqlite.rs
expression: snapshot
---
id: app
display_name: ~
backend: sqlite
namespaces:
  - name: main
    comment: ~
enums: []
tables:
  - namespace: main
    name: accounts
    comment: ~
    columns:
      - name: id
        data_type: INTEGER
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: email
        data_type: TEXT
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: NOCASE
          generated_expression: ~
      - name: display_name
        data_type: TEXT
        nullable: true
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: balance_cents
        data_type: INTEGER
        nullable: true
        default: "0"
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: normalized_email
        data_type: TEXT
        nullable: true
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: stored_generated
          collation: BINARY
          generated_expression: lower (email)
      - name: parent_id
        data_type: INTEGER
        nullable: true
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
    constraints:
      - name: accounts_pk
        kind: primary_key
        columns:
          - id
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: replace
          auto_increment: true
          declared_on_column: true
      - name: accounts_email_nn
        kind: not_null
        columns:
          - email
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: fail
          auto_increment: false
          declared_on_column: true
      - name: accounts_email_uq
        kind: unique
        columns:
          - email
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ignore
          auto_increment: false
          declared_on_column: true
      - name: accounts_display_name_uq
        kind: unique
        columns:
          - display_name
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: abort
          auto_increment: false
          declared_on_column: true
      - name: accounts_balance_check
        kind: check
        columns:
          - balance_cents
        expression: balance_cents >= 0
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      - name: accounts_parent_fk
        kind: foreign_key
        columns:
          - parent_id
        expression: ~
        references:
          namespace: main
          table: accounts
          columns:
            - id
          on_update: set_null
          on_delete: cascade
          match_name: simple
          deferrability:
            deferrable: true
            initially: deferred
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      - name: accounts_email_check
        kind: check
        columns: []
        expression: length (email) > 3
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: false
      - name: accounts_email_balance_uq
        kind: unique
        columns:
          - email
          - balance_cents
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: rollback
          auto_increment: false
          declared_on_column: false
    indexes:
      - name: sqlite_autoindex_accounts_1
        unique: true
        terms:
          - target:
              column: email
            collation: NOCASE
            operator_class: ~
            order: ascending
            nulls_order: ~
        predicate: ~
        definition: ~
        backend:
          backend: sqlite
          origin: unique_constraint
      - name: sqlite_autoindex_accounts_2
        unique: true
        terms:
          - target:
              column: display_name
            collation: BINARY
            operator_class: ~
            order: ascending
            nulls_order: ~
        predicate: ~
        definition: ~
        backend:
          backend: sqlite
          origin: unique_constraint
      - name: sqlite_autoindex_accounts_3
        unique: true
        terms:
          - target:
              column: email
            collation: NOCASE
            operator_class: ~
            order: ascending
            nulls_order: ~
          - target:
              column: balance_cents
            collation: BINARY
            operator_class: ~
            order: ascending
            nulls_order: ~
        predicate: ~
        definition: ~
        backend:
          backend: sqlite
          origin: unique_constraint
    backend:
      backend: sqlite
      without_rowid: false
      strict: false
      definition: "CREATE TABLE accounts (\n    id INTEGER CONSTRAINT accounts_pk\n        PRIMARY KEY ON CONFLICT REPLACE AUTOINCREMENT,\n    email TEXT COLLATE NOCASE\n        CONSTRAINT accounts_email_nn NOT NULL ON CONFLICT FAIL\n        CONSTRAINT accounts_email_uq UNIQUE ON CONFLICT IGNORE,\n    display_name TEXT CONSTRAINT accounts_display_name_uq UNIQUE ON CONFLICT ABORT,\n    balance_cents INTEGER DEFAULT (0)\n        CONSTRAINT accounts_balance_check CHECK (balance_cents >= 0),\n    normalized_email TEXT\n        GENERATED ALWAYS AS (lower(email)) STORED,\n    parent_id INTEGER\n        CONSTRAINT accounts_parent_fk REFERENCES accounts (id)\n        MATCH simple\n        ON UPDATE SET NULL\n        ON DELETE CASCADE\n        DEFERRABLE INITIALLY DEFERRED,\n    CONSTRAINT accounts_email_check CHECK (length(email) > 3),\n    CONSTRAINT accounts_email_balance_uq\n        UNIQUE (email, balance_cents) ON CONFLICT ROLLBACK\n)"
      kind:
        kind: ordinary
  - namespace: main
    name: child_keys
    comment: ~
    columns:
      - name: tenant_id
        data_type: INTEGER
        nullable: true
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: parent_external_id
        data_type: TEXT
        nullable: true
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
    constraints:
      - name: ~
        kind: foreign_key
        columns:
          - tenant_id
          - parent_external_id
        expression: ~
        references:
          namespace: main
          table: parent_keys
          columns:
            - tenant_id
            - external_id
          on_update: no_action
          on_delete: set_default
          match_name: ~
          deferrability:
            deferrable: false
            initially: immediate
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: false
    indexes: []
    backend:
      backend: sqlite
      without_rowid: false
      strict: false
      definition: "CREATE TABLE child_keys (\n    tenant_id INTEGER,\n    parent_external_id TEXT,\n    FOREIGN KEY (tenant_id, parent_external_id)\n        REFERENCES parent_keys\n        ON DELETE SET DEFAULT\n        NOT DEFERRABLE INITIALLY IMMEDIATE\n)"
      kind:
        kind: ordinary
  - namespace: main
    name: parent_keys
    comment: ~
    columns:
      - name: tenant_id
        data_type: INTEGER
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: external_id
        data_type: TEXT
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
    constraints:
      - name: ~
        kind: not_null
        columns:
          - tenant_id
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      - name: ~
        kind: not_null
        columns:
          - external_id
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      - name: ~
        kind: primary_key
        columns:
          - tenant_id
          - external_id
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: false
    indexes:
      - name: sqlite_autoindex_parent_keys_1
        unique: true
        terms:
          - target:
              column: tenant_id
            collation: BINARY
            operator_class: ~
            order: ascending
            nulls_order: ~
          - target:
              column: external_id
            collation: BINARY
            operator_class: ~
            order: ascending
            nulls_order: ~
        predicate: ~
        definition: ~
        backend:
          backend: sqlite
          origin: primary_key
    backend:
      backend: sqlite
      without_rowid: true
      strict: false
      definition: "CREATE TABLE parent_keys (\n    tenant_id INTEGER NOT NULL,\n    external_id TEXT NOT NULL,\n    PRIMARY KEY (tenant_id, external_id)\n) WITHOUT ROWID"
      kind:
        kind: ordinary
views: []
triggers: []
functions: []
