crates/introspect/tests/snapshots/sqlite__table_features.snap
---
source: crates/introspect/tests/sqlite.rs
expression: snapshot
---
id: app
display_name: ~
backend: sqlite
namespaces:
  - name: main
    comment: ~
enums: []
tables:
  - namespace: main
    name: measurements
    comment: ~
    columns:
      - name: id
        data_type: INTEGER
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: width
        data_type: REAL
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: height
        data_type: REAL
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: area
        data_type: REAL
        nullable: true
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: virtual_generated
          collation: BINARY
          generated_expression: width * height
      - name: dimensions
        data_type: TEXT
        nullable: true
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: stored_generated
          collation: BINARY
          generated_expression: "width || 'x' || height"
    constraints:
      - name: ~
        kind: primary_key
        columns:
          - id
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      - name: ~
        kind: not_null
        columns:
          - id
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      - name: ~
        kind: not_null
        columns:
          - width
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      - name: ~
        kind: not_null
        columns:
          - height
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
    indexes: []
    backend:
      backend: sqlite
      without_rowid: false
      strict: true
      definition: "CREATE TABLE measurements (\n    id INTEGER PRIMARY KEY NOT NULL,\n    width REAL NOT NULL,\n    height REAL NOT NULL,\n    area REAL GENERATED ALWAYS AS (width * height) VIRTUAL,\n    dimensions TEXT GENERATED ALWAYS AS (width || 'x' || height) STORED\n) STRICT"
      kind:
        kind: ordinary
  - namespace: main
    name: settings
    comment: ~
    columns:
      - name: key
        data_type: TEXT
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: locale
        data_type: TEXT
        nullable: false
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
      - name: value
        data_type: TEXT
        nullable: true
        default: ~
        comment: ~
        backend:
          backend: sqlite
          kind: normal
          collation: BINARY
          generated_expression: ~
    constraints:
      - name: ~
        kind: not_null
        columns:
          - key
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      - name: ~
        kind: not_null
        columns:
          - locale
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      - name: ~
        kind: primary_key
        columns:
          - key
          - locale
        expression: ~
        references: ~
        backend:
          backend: sqlite
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: false
    indexes:
      - name: sqlite_autoindex_settings_1
        unique: true
        terms:
          - target:
              column: key
            collation: BINARY
            operator_class: ~
            order: ascending
            nulls_order: ~
          - target:
              column: locale
            collation: BINARY
            operator_class: ~
            order: ascending
            nulls_order: ~
        predicate: ~
        definition: ~
        backend:
          backend: sqlite
          origin: primary_key
    backend:
      backend: sqlite
      without_rowid: true
      strict: false
      definition: "CREATE TABLE settings (\n    key TEXT NOT NULL,\n    locale TEXT NOT NULL,\n    value TEXT,\n    PRIMARY KEY (key, locale)\n) WITHOUT ROWID"
      kind:
        kind: ordinary
views: []
triggers: []
functions: []
